<resources>
    <string name="app_name">Gasto de Viagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_distancia">Total de distância</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">Kms por litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="valor_total_gasto">R$0</string>
    <string name="botao_calcular">Calcular</string>
</resources>